--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,10 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
+    - name: Fix permissions
+      run: |
+        chmod -v -R +rX "_site/" | while read line; do
+          echo "::warning title=Invalid file permissions automatically fixed::$line"
+        done
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v2
