--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
     
     - name: Build zip project # This would actually build your project, using zip for an example artifact
       run: |
-        zip --junk-paths my-artifact build
+        zip my-artifact ./build/
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
