--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
     
     - name: Build zip project # This would actually build your project, using zip for an example artifact
       run: |
-        zip my-artifact ./build/
+        zip -r my-artifact ./build/*
         ls
     - name: Create Release
       id: create_release
@@ -47,10 +47,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: 10
-        release_name: Release 10
-        draft: false
-        prerelease: false
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+          Changes in this Release
+          - First Change
+          - Second Change
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
