--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,18 +41,21 @@ jobs:
       run: |
         zip -r my-artifact ./build/*
         ls
+        echo ${{ github.ref }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.version }}
+        release_name: Release ${{ github.version }}
         body: |
           Changes in this Release
           - First Change
           - Second Change
+        draft: false
+        prerelease: false
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
