--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         zip -r my-artifact ./build/*
         ls
-        echo ${{ github.ref }}
+        echo ${{ github }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
