--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,15 +41,15 @@ jobs:
       run: |
         zip -r my-artifact ./build/*
         ls
-        echo ${{ github }}
+        echo ${{ github.run_number }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.version }}
-        release_name: Release ${{ github.version }}
+        tag_name: ${{ github.run_number }}
+        release_name: Release ${{ github.run_number }}
         body: |
           Changes in this Release
           - First Change
