--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
     
     - name: Build zip project # This would actually build your project, using zip for an example artifact
       run: |
-        zip -r my-artifact ./build/*
+        zip -r build-zip ./build/*
         ls
         echo ${{ github.run_number }}
     - name: Create Release
@@ -50,10 +50,11 @@ jobs:
       with:
         tag_name: ${{ github.run_number }}
         release_name: Release ${{ github.run_number }}
-        body: |
-          Changes in this Release
-          - First Change
-          - Second Change
+        body_path: ./README.md
+        # body: |
+        #  Changes in this Release
+        #  - First Change
+        #  - Second Change
         draft: false
         prerelease: false
     - name: Upload Release Asset
@@ -63,8 +64,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./my-artifact.zip
-        asset_name: my-artifact.zip
+        asset_path: ./build-zip.zip
+        asset_name: build-artifact.zip
         asset_content_type: application/zip
 
   deploy:
