--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,7 +44,10 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
-        name: build-files
+        name: my-artifact
+        path: path/to/artifact      
+    - name: Display structure of downloaded files
+      run: ls -R
     - name: Build zip # This would actually build your project, using zip for an example artifact
       run: |
         ls
