--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
-        name: my-artifact
+        name: build-files
         path: path/to/artifact      
     - name: Display structure of downloaded files
       run: ls -R
