--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,13 +45,12 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: build-files
-        path: path/to/artifact      
     - name: Display structure of downloaded files
       run: ls -R
     - name: Build zip # This would actually build your project, using zip for an example artifact
       run: |
         ls
-        zip -r build-zip ./build/*
+        zip -r -j build-zip ./build/*
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
