--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Build zip # This would actually build your project, using zip for an example artifact
       run: |
         tar xvf artifact.tar
-        ls
-        zip -r -j build-zip ./artifact/*
+        ls -R
+        zip -r -j build-zip .
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
