--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,11 +45,11 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: build-files        
-    - name: Display structure of downloaded files
-      run: ls -R
     - name: Build zip # This would actually build your project, using zip for an example artifact
       run: |
+        ls -R
         tar xvf artifact.tar
+        rm artifact.tar
         ls -R
         zip -r build-zip .
     - name: Create Release
