--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,9 +48,8 @@ jobs:
     - name: Build zip # This would actually build your project, using zip for an example artifact
       run: |
         ls -R
-        tar xvf artifact.tar
+        tar xvf artifact.tar # Извлекаем файлы из архива tar
         rm artifact.tar
-        ls -R
         zip -r build-zip .
     - name: Create Release
       id: create_release
@@ -61,10 +60,10 @@ jobs:
         tag_name: ${{ github.run_number }}
         release_name: Release ${{ github.run_number }}
         # body_path: ./README.md
-        # body: |
-        #  Changes in this Release
-        #  - First Change
-        #  - Second Change
+        body: |
+         Changes in this Release
+         - First Change
+         - Second Change
         draft: false
         prerelease: false
     - name: Upload Release Asset
